[gd_scene load_steps=16 format=3 uid="uid://4uh673757wtx"]

[ext_resource type="Script" path="res://scripts/network_manager.gd" id="1_fnu50"]
[ext_resource type="PackedScene" uid="uid://ly1dv26c27ff" path="res://scenes/levels/level_big.tscn" id="1_negoe"]
[ext_resource type="Script" path="res://scripts/main_menu_ui.gd" id="1_ok3ni"]
[ext_resource type="Script" path="res://scripts/menu_manager.gd" id="1_qh41f"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="1_wlfwy"]
[ext_resource type="Script" path="res://scripts/lobby_ui.gd" id="2_6kl11"]
[ext_resource type="PackedScene" uid="uid://clh6wi7v5ir4j" path="res://scenes/levels/level_small.tscn" id="2_ethu2"]
[ext_resource type="Script" path="res://scripts/world.gd" id="3_ltb6v"]
[ext_resource type="Script" path="res://scripts/gameplay_ui.gd" id="4_lewxl"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="5_fo7ky"]
[ext_resource type="PackedScene" uid="uid://dwovq5jl3h058" path="res://scenes/player.tscn" id="6_qj4uo"]
[ext_resource type="PackedScene" uid="uid://cn7aloedpuwjr" path="res://scenes/ui/scoreboard_entry.tscn" id="8_y3w7w"]
[ext_resource type="PackedScene" uid="uid://c5ah4utikwf8k" path="res://scenes/manual_player.tscn" id="12_206qu"]
[ext_resource type="Resource" uid="uid://dv5umcpiewdif" path="res://assets/palettes/p1_palette.tres" id="13_3ofs7"]
[ext_resource type="Resource" uid="uid://dembgtbg6r00f" path="res://assets/palettes/p2_palette.tres" id="14_fdi5q"]

[node name="Main" type="Node"]

[node name="LevelManager" type="Node2D" parent="." node_paths=PackedStringArray("game_manager")]
script = ExtResource("1_wlfwy")
level_prefab = ExtResource("2_ethu2")
game_manager = NodePath("../GameManager")
disable_collision_for_clients = false

[node name="WorldCamera2D" type="Camera2D" parent="LevelManager"]
zoom = Vector2(0.1, 0.1)

[node name="Level" parent="LevelManager" instance=ExtResource("1_negoe")]

[node name="World" type="Node2D" parent="."]
script = ExtResource("3_ltb6v")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MenuManager" type="Control" parent="UI" node_paths=PackedStringArray("network_manager")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qh41f")
network_manager = NodePath("../../NetworkManager")

[node name="MainMenu" type="Control" parent="UI/MenuManager" node_paths=PackedStringArray("menu_manager", "network_manager", "ip_line_edit", "port_line_edit", "host_button", "join_button", "cancel_button")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ok3ni")
menu_manager = NodePath("..")
network_manager = NodePath("../../../NetworkManager")
ip_line_edit = NodePath("PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/IPLineEdit")
port_line_edit = NodePath("PanelContainer/MarginContainer/VBoxContainer/HSplitContainer2/PortLineEdit")
host_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/HSplitContainer3/HostButton")
join_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/HSplitContainer3/JoinButton")
cancel_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/CancelButton")

[node name="PanelContainer" type="PanelContainer" parent="UI/MenuManager/MainMenu"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -80.0
offset_right = 79.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuManager/MainMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Wizard Battle"

[node name="HSplitContainer" type="HSplitContainer" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "IP"

[node name="IPLineEdit" type="LineEdit" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "localhost"

[node name="HSplitContainer2" type="HSplitContainer" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Port"

[node name="PortLineEdit" type="LineEdit" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer2"]
layout_mode = 2
text = "9955"

[node name="HSplitContainer3" type="HSplitContainer" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="CancelButton" type="Button" parent="UI/MenuManager/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Lobby" type="Control" parent="UI/MenuManager" node_paths=PackedStringArray("network_manager", "ready_button", "leave_button", "lobby_info_label", "lobby_users_label", "username_line_edit")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6kl11")
network_manager = NodePath("../../../NetworkManager")
ready_button = NodePath("PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2/ReadyButton")
leave_button = NodePath("PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2/LeaveButton")
lobby_info_label = NodePath("PanelContainer/MarginContainer/VBoxContainer2/LobbyInfoLabel")
lobby_users_label = NodePath("PanelContainer/MarginContainer/VBoxContainer2/LobbyUsersLabel")
username_line_edit = NodePath("PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2/HSplitContainer/UsernameLineEdit")

[node name="PanelContainer" type="PanelContainer" parent="UI/MenuManager/Lobby"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -80.0
offset_right = 79.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuManager/Lobby/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Wizard Battle Lobby"

[node name="LobbyInfoLabel" type="Label" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "[3]: 192.234
[3]: 192.234"

[node name="LobbyUsersLabel" type="Label" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "[3]: 192.234
[3]: 192.234"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HSplitContainer" type="HSplitContainer" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2/HSplitContainer"]
layout_mode = 2
text = "Username"

[node name="UsernameLineEdit" type="LineEdit" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2/HSplitContainer"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Ready"

[node name="LeaveButton" type="Button" parent="UI/MenuManager/Lobby/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Leave"

[node name="GameplayUI" type="Control" parent="UI" node_paths=PackedStringArray("network_manager", "game_manager", "info_label", "disconnect_button", "scoreboard")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_lewxl")
network_manager = NodePath("../../NetworkManager")
game_manager = NodePath("../../GameManager")
info_label = NodePath("MarginContainer/VBoxContainer/InfoLabel")
disconnect_button = NodePath("MarginContainer/VBoxContainer/DisconnectButton")
scoreboard_entry_prefab = ExtResource("8_y3w7w")
scoreboard = NodePath("MarginContainer2/VBoxContainer/ScoreboardContainer")

[node name="MarginContainer" type="MarginContainer" parent="UI/GameplayUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameplayUI/MarginContainer"]
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="UI/GameplayUI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Disconnect"

[node name="InfoLabel" type="Label" parent="UI/GameplayUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player 11"

[node name="MarginContainer2" type="MarginContainer" parent="UI/GameplayUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_bottom = 90.0
grow_horizontal = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameplayUI/MarginContainer2"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI/GameplayUI/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Scoreboard"

[node name="ScoreboardContainer" type="VBoxContainer" parent="UI/GameplayUI/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" parent="UI/GameplayUI/MarginContainer2/VBoxContainer/ScoreboardContainer" instance=ExtResource("8_y3w7w")]
layout_mode = 2

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("1_fnu50")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("world", "network_manager", "level_manager")]
script = ExtResource("5_fo7ky")
world = NodePath("../World")
network_manager = NodePath("../NetworkManager")
level_manager = NodePath("../LevelManager")
player_prefab = ExtResource("6_qj4uo")
manual_player_prefab = ExtResource("12_206qu")
color_palettes = Array[Resource("res://scripts/color_palette.gd")]([ExtResource("13_3ofs7"), ExtResource("14_fdi5q")])
